--- a/Project Name/NavigationExample/src/main/res/layout/activity_main.xml
+++ b/Project Name/NavigationExample/src/main/res/layout/activity_main.xml
@@ -4,11 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_gravity="center_vertical"
-    android:background="#FFFFF0"
-    >
+    android:gravity="center_vertical|center_horizontal">
 
     <EditText
         android:id="@+id/messageEditText"
@@ -18,17 +16,14 @@
         android:layout_margin="8dp"
         android:gravity="center"
         android:hint="send message to next activity"
-        android:inputType="text"
-
-        />
+        android:inputType="text" />
 
     <Button
         android:id="@+id/nextActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="next activity"
-        android:layout_gravity="center_horizontal"
-        />
+        android:layout_gravity="center_horizontal" />
 
 
 </LinearLayout>
