--- a/Project Name/FragmentsExample2/src/main/res/layout/fragment_two.xml
+++ b/Project Name/FragmentsExample2/src/main/res/layout/fragment_two.xml
@@ -9,7 +9,7 @@
 
 
     <Button
-        android:id="@+id/myFragmentButton2"
+        android:id="@+id/fragment2Button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Don't Click!"
